--- a/food.html
+++ b/food.html
@@ -15,20 +15,24 @@
         👁
         <a href="food.html"><sup>food</sup></a>
       </nav>
-      who doesn't think about food?
+      <sub>(who doesn't think about food?)</sub>
     </header>
 
-    <main>
-        <section class="content">
-          <h2>think about food like this</h2>
+    <main class="food">
+        <section>
+          <h2>think about food in this way</h2>
           <iframe
           src="https://www.conflictkitchen.org/"
           height="800"
-          width="500">
+          width="650"
+          class="link">
           </iframe>
         </section>
         <section>
-          <iframe src="https://www.kickstarter.com/projects/801305394/enemy-kitchen-by-michael-rakowitz-at-mca-chicago" width="500" height="800">
+          <iframe src="https://www.kickstarter.com/projects/801305394/enemy-kitchen-by-michael-rakowitz-at-mca-chicago"
+          width="650"
+          height="800"
+          class="link">
           </iframe>
         </section>
     </main>
