--- a/stream-of-consciousness.html
+++ b/stream-of-consciousness.html
@@ -17,24 +17,25 @@
       </nav>
     </header>
 
-    <main>
+    <main class="stuff">
       <h2>so much to do</h2>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/VNiKaRzDFMA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-      </iframe>
+      <p>but first, let me go on YouTube</p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/A-fjI1DSAUg?start=4053" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-      </iframe>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/sPAH7kK4CCU?rel=0&amp;start=3" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
       </iframe>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/JS91p-vmSf0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
       </iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/sPAH7kK4CCU?rel=0&amp;start=3" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+      </iframe>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/A306Y7a4NRo?rel=0&amp;start=3" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
       </iframe>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/wsMs-DuGy1o?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/VNiKaRzDFMA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
       </iframe>
 
-      <section class="academic">
-        <h3>so i take a political philosophy class and had to take a "Machiavelli Test" and look at my results...</h3>
-        <img src="img/mach-results.png" alt="good thing you can't see this" width="400">
+      <section class="hangout">
+        <h3>so as i was working on this, ann, will, and i decided to listen to music together on the internet 🎶</h3>
+        <img src="img/will-music.png" alt="fun cute stuff" width="1000">
+        <p>and ANN started eating frozen food from TJ</p>
+        <p>which of course... made me want to<a href="https://www.traderjoes.com/fearless-flyer/category/5" target="_blank">goooOOOOOoooooOOOOoogle it</a></p>
       </section>
     </main>
   </body>
