--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
     </header>
 
     <main>
-      <img src="" alt="" class="">
+      <p class="emoji">🕴🏻</p>
       <section class="content">
         <h2>about me</h2>
         <p>this is some random important stuff that i interact with everyday.</p>
         <p>my process? ... ????  i'm trying incorporate stuff i learn off the internet</p>
         <p>and it's crazy how this can be accessed in japan, in brazil, in singapore ... whoa</p>
         <h3>i like school</h3>
-        
+
       </section>
 
-
+      <footer>
+        &copy; Misaki Ueno 2018
+      </footer>
     </main>
 
   </body>
