--- a/stream-of-consciousness.html
+++ b/stream-of-consciousness.html
@@ -20,14 +20,18 @@
     <main class="stuff">
       <h2>so much to do</h2>
       <p>but first, let me go on YouTube</p>
+      <p class="text">reviewing class materials...</p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/A-fjI1DSAUg?start=4053" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
       </iframe>
+      <p class="text">and then ... welcoming distractions ofc</p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/JS91p-vmSf0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
       </iframe>
+      <p class="text">remember these?</p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/sPAH7kK4CCU?rel=0&amp;start=3" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
       </iframe>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/A306Y7a4NRo?rel=0&amp;start=3" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
       </iframe>
+      <p class="text">here is my favorite song atm !</p>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/VNiKaRzDFMA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
       </iframe>
 
@@ -37,6 +41,7 @@
         <p>and ANN started eating frozen food from TJ</p>
         <p>which of course... made me want to<a href="https://www.traderjoes.com/fearless-flyer/category/5" target="_blank">goooOOOOOoooooOOOOoogle it</a></p>
       </section>
+      <footer>&copy; Misaki Ueno 2018</footer>
     </main>
   </body>
 </html>
