final final edit
final edit lastly

--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
 
       </section>
 
-      <footer>
-        &copy; Misaki Ueno 2018
-      </footer>
     </main>
-
+    <footer>&copy; Misaki Ueno 2018</footer>
   </body>
 </html>
