--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <p>my process? ... ????  i'm trying incorporate stuff i learn off the internet</p>
         <p>and it's crazy how this can be accessed in japan, in brazil, in singapore ... whoa</p>
         <h3>i like school</h3>
+        <h4>have fun</h4>
 
       </section>
 
